--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,6 +18,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::433356891743:role/ec2-role
+          aws-region: us-east-1
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -34,9 +40,8 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          region: ${{ secrets.AWS_REGION }}
+        uses: aws-actions/amazon-ecr-login@v2
+        
 
       - name: Build, tag, and push Docker image
         env:
