--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::433356891743:role/ec2-role
+          role-to-assume: arn:aws:iam::433356891743:role/GitHubActionsECRPushRole
           aws-region: us-east-1
 
       - name: Set up QEMU
