--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,23 +1,23 @@
 # app/Dockerfile
 
 # Stage 1: Build
-FROM python:3.9-slim AS builder
+FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --upgrade pip && pip install --user -r requirements.txt
+# Copy requirements first to leverage Docker layer caching
+COPY requirements.txt /app
 
-# Stage 2: Run
-FROM python:3.9-slim
+# Upgrade pip, setuptools, and wheel
+# RUN pip install --upgrade pip setuptools wheel
 
-WORKDIR /app
-
-COPY --from=builder /root/.local /root/.local
-ENV PATH=/root/.local/bin:$PATH
+# Install dependencies globally without using --user and without cache
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . /app/
 
+# Expose the application port
 EXPOSE 5000
 
+# Define the default command to run the application
 CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app:app"]
